modified as per AK feedback

--- a/static-html/accordion.html
+++ b/static-html/accordion.html
@@ -24,7 +24,7 @@
       <!-- active -->
       <div class="accordion__head">
         <span>Akshay Kadam</span>
-        <button type="button">Status</button>
+        <button type="button" class="accordion__button">Status</button>
       </div>
       <div class="accordion__body">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi placeat autem sit, dignissimos blanditiis
@@ -35,7 +35,7 @@
     <div class="accordion__box">
       <!-- active -->
       <div class="accordion__head">
-        <span>Vinod Dabholkar</span> <button type="button">Status</button>
+        <span>Vinod Dabholkar</span> <button type="button" class="accordion__button">Status</button>
       </div>
       <div class="accordion__body">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi placeat autem sit, dignissimos blanditiis
@@ -47,7 +47,7 @@
       <!-- active -->
       <div class="accordion__head">
         <span>Ramesh Gawde</span>
-        <button type="button">Status</button>
+        <button type="button" class="accordion__button">Status</button>
       </div>
       <div class="accordion__body">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi placeat autem sit, dignissimos blanditiis
@@ -59,7 +59,7 @@
       <!-- active -->
       <div class="accordion__head">
         <span>Swapnil Patkar</span>
-        <button type="button">Status</button>
+        <button type="button" class="accordion__button">Status</button>
       </div>
       <div class="accordion__body">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi placeat autem sit, dignissimos blanditiis
